game over section fix on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,7 @@ section {
 
 .game-over {
 	height: 350px;
-	margin: 90% 12%;
+	margin: 70% 12%;
 }
 
 .game-over img {
